# pyradix

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pyradix/: __init__.py  cli.py  client.py  connection.py  constants.py
tests/: __init__.py  dummy_responses.py  test_cli.py  test_client.py  test_pyradix.py
