[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pyradix/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[tool:black]
line-length = 79
# Don't convert single-quotes to double-quotes
skip-string-normalization = true

[options.entry_points]
console_scripts =
    pyradix = pyradix.cli:main
